<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="formValidator"
            type="com.codefusiongroup.gradshub.utils.validations.FormValidator" />

        <variable
            name="registerViewModel"
            type="com.codefusiongroup.gradshub.authentication.registration.RegisterViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/firstNameET"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/firstName_hint"
                android:inputType="textPersonName"
                android:text="@={registerViewModel.firstName}"
                app:firstNameValidator="@{registerViewModel.firstName}"
                app:layout_constraintBottom_toTopOf="@+id/lastNameET"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.468"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/lastNameET"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/lastName_hint"
                android:inputType="textPersonName"
                android:text="@={registerViewModel.lastName}"
                app:lastNameValidator="@{registerViewModel.lastName}"
                app:layout_constraintBottom_toTopOf="@+id/emailET"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.468"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameET" />


            <EditText
                android:id="@+id/emailET"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/register_email_hint"
                android:inputType="textEmailAddress"
                android:text="@={registerViewModel.email}"
                app:emailValidator="@{registerViewModel.email}"
                app:layout_constraintBottom_toTopOf="@+id/phoneNumberET"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastNameET" />


            <EditText
                android:id="@+id/phoneNumberET"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="12dp"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/phone_number_hint"
                android:text="@={registerViewModel.phoneNo}"
                app:phoneNoValidator="@{registerViewModel.phoneNo}"
                android:inputType="phone"
                android:maxLength="10"
                app:layout_constraintBottom_toTopOf="@+id/academicStatusTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailET" />


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:spinnerMode="dropdown"
                android:entries="@array/ACADEMIC_STATUS"
                android:selectedItemPosition="@={registerViewModel.selectedItemPosition}"
                app:layout_constraintBottom_toTopOf="@+id/passwordET"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/academicStatusTV" />


            <TextView
                android:id="@+id/academicStatusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/academic_status_tv"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.808"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumberET" />


            <EditText
                android:id="@+id/passwordET"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword"
                android:text="@={registerViewModel.password}"
                app:passwordValidator="@{registerViewModel.confirmPassword}"
                app:layout_constraintBottom_toTopOf="@+id/confirmNewPasswordET"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />


            <EditText
                android:id="@+id/confirmNewPasswordET"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/register_confirm_password_hint"
                android:inputType="textPassword"
                android:text="@={registerViewModel.confirmPassword}"
                app:originalPassword="@{registerViewModel.password}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordET" />


            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/register_rounded_button"
                android:onClick="@{()->registerViewModel.onSubmitClicked()}"
                android:text="@string/submit_button"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.173"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmNewPasswordET"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/generateTokenBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/register_rounded_button"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="REFRESH TOKEN"
                android:visibility="gone"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.816"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <ProgressBar
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>