<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id = "@+id/Fragment_container"
    tools:context=".authentication.AuthenticationActivity">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/authentication_nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
...
