...
    <string name="register_password_hint">Password</string>
    <string name="register_confirm_password_hint"> Re-enter password</string>
    <string name="submit_button">Submit</string>

    <string-array name="ACADEMIC_STATUS">
        <item>Select your academic status here</item>
        <item>Honours</item>
        <item>Masters</item>
        <item>PhD</item>
    </string-array>

    <string name="status_hint">Select your academic status here</string>
    <string name="status_error">please select valid academic status</string>
...
    <string name="private_radio_button">private</string>
    <string name="done_button">DONE</string>

    <!-- for menu items on the navigation drawer -->
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_myGroups">My Groups</string>
    <string name="menu_createGroup">Create Group</string>
    <string name="menu_exploreGroup">Search Groups</string>

    <!-- button that appears in the recycler view in my groups page -->
    <string name="see_available_groups">see available groups</string>

...
