<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scheduleList"
        android:name="com.example.gradshub.ScheduleListFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layoutManager="LinearLayoutManager"
        tools:context=".events.ScheduleListFragment"
        tools:listitem="@layout/fragment_schedule_item" />


</RelativeLayout>



