...
            android:icon="@drawable/ic_search"
            android:title="@string/menu_exploreGroup" />

        <item
            android:id="@+id/scheduleFragment"
            android:icon="@drawable/ic_schedule"
            android:title="Schedule" />

        <item
            android:id="@+id/chatsListFragment"
            android:icon="@drawable/ic_message"
            android:title="Direct Messages" />

...
