...
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginLeft="@dimen/text_margin"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="Machine Learning"
            android:textAppearance="?attr/textAppearanceListItem"/>


        <TextView
            android:id="@+id/deadlineTV"
            android:layout_width="230dp"
...
            android:gravity="center"
            android:drawableLeft="@drawable/ic_fav_filled"
            android:drawableStart="@drawable/ic_fav_filled"/>


        <ImageButton
            android:id="@+id/favouriteBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/titleTV"
            android:layout_toEndOf="@id/titleTV"
            android:background="@null"
            android:contentDescription="favourite"
...
